Bug 13257 - winbindd: add_trusted_domain_from_auth() should not use dns_name = ""
Summary: winbindd: add_trusted_domain_from_auth() should not use dns_name = ""
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Ralph Böhme
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 13231 13264
Blocks:
  Show dependency treegraph
 
Reported: 2018-02-09 10:00 UTC by Ralph Böhme
Modified: 2018-02-12 09:44 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2018-02-09 10:00:40 UTC

    
Comment 1 Ralph Böhme 2018-02-10 08:07:09 UTC
Patched in master. Backport for 4.8 attached to bug #13231.
Comment 2 Ralph Böhme 2018-02-12 09:44:49 UTC
Pushed to both 4-8-test, closing out bug report.